<resources>
    <string name="app_name">Easy English</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Password_label">Введите пароль</string>
    <string name="Email_label">Введите адрес электронной почты</string>
    <string name="level_1">Уровень 1</string>
    <string name="level_2">Уровень 2</string>
    <string name="level_3">Уровень 3</string>
    <string name="level_4">Уровень 4</string>
    <string name="level_5">Уровень 5</string>
    <string name="level_6">Уровень 6</string>
    <string name="level_7">Уровень 7</string>
    <string name="level_8">Уровень 8</string>
    <string name="level_9">Уровень 9</string>
    <string name="level_10">Уровень 10</string>
    <string name="audio">Аудио</string>
    <string name="answer">Ответить</string>
    <string name="insert_answer">Введите ответ</string>
    <string name="result">Результат</string>
    <string name="back_to_menu">Вернуться в меню</string>
    <string name="exercises">Упражнения</string>
    <string name="test">Тест</string>
    <string name="insert_sentence">Напиши предложение</string>
    <string name="listening">Аудирование</string>
    <string name="registration">Регистрация</string>
    <string name="log_in_to_continue">Войдите, чтобы продолжить</string>
    <string name="Email">Email</string>
    <string name="password">Пароль</string>
    <string name="Sign_up">Зарегестрироваться</string>
    <string name="already_have_an_account">Уже есть аккаунт?</string>
    <string name="log_in">Войти</string>
    <string name="sentences">Предложения</string>
    <string name="write_sentence">Собери предложение</string>
    <string name="authorization">Авторизация</string>
    <string name="finish_reg">Для завершения регистрации проверьте свою почту</string>
    <string name="back">Назад</string>
</resources>