<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Views.AudioInner">

    <TextView
        android:id="@+id/textView_header"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/azure"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:text="@string/audio"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_answer"
        android:layout_width="315dp"
        android:layout_height="68dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/jost"
        android:textSize="32sp"
        android:text="@string/answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextListen" />

    <EditText
        android:id="@+id/editTextListen"
        android:layout_width="315dp"
        android:layout_height="51dp"
        android:layout_marginTop="136dp"
        android:ems="10"
        android:hint="@string/insert_answer"
        android:fontFamily="@font/jost"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_listen"
        android:autofillHints="" />

    <Button
        android:id="@+id/button_listen"
        android:layout_width="202dp"
        android:layout_height="210dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/audio_svgrepo_com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_header" />


</androidx.constraintlayout.widget.ConstraintLayout>